# djehuty

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MANIFEST.in  Makefile.am  README.md  RELEASE.md  SECURITY.md  configure.ac  djehuty-example-config.xml  files_check.txt  guix.scm  guix.scm.in  justfile  main.py  mkdocs.yml  pyproject.toml  pyproject.toml.in  requirements-dev.txt  requirements.txt  run_api_server.py  setup.cfg  setup.cfg.in
doc/: Makefile.am  api.tex  changelog_to_news.py  contact.tex  contributing.tex  djehuty.sty.in  djehuty.tex  introduction.tex  knowledge-graph.tex  news.tex  references.bib  running-djehuty.tex
doc/markdown/: contributing.md  introduction.md  knowledge-graph.md  news.md
src/: Makefile.am
src/djehuty/: ui.py
src/djehuty/api/: database.py  formatter.py  ui.py  validator.py  wsgi.py
src/djehuty/api/resources/html_templates/: 403.html  agriculture-animal-plant-sciences.html  chemistry.html  home.html  layout.html  portal.html
src/djehuty/api/resources/sparql_templates/: article_files.sparql  article_statistics.sparql  article_statistics_timeline.sparql  article_versions.sparql  articles.sparql  authors.sparql  categories.sparql  collection_articles_count.sparql  collection_versions.sparql  collections.sparql  delete_article.sparql  delete_authors_for_article.sparql  delete_authors_for_item.sparql  delete_collection.sparql  delete_private_links.sparql  funding.sparql  highest_id.sparql  prefixes.sparql  private_links.sparql  references.sparql  repository_statistics.sparql  repository_statistics_files.sparql  tags.sparql  update_article_thumb.sparql  update_private_link.sparql
src/djehuty/api/resources/static/css/: main.css
src/djehuty/api/resources/static/js/: agriculture-animal-plant-sciences.js  chemistry.js  d3-extras.js  portal.js
src/djehuty/api/resources/templates/: layout.html
src/djehuty/backup/: database.py  figshare.py  ui.py
src/djehuty/backup/resources/: contributors_organizations.json  dois.json  groups.json  languages.json  licenses.json  public_collections.json  root_categories.json
src/djehuty/schema/: README.md  __init__.py  _generate_initial.py  cli.py  migrate.py
src/djehuty/schema/migrations/: 0001_initial.ttl
src/djehuty/utils/: constants.py  convenience.py  counters.py  html2md.py  rdf.py
src/djehuty/web/: cache.py  config.py  database.py  email.py  email_handler.py  formatter.py  locks.py  s3.py  ui.py  validator.py  wsgi.py  xml_formatter.py  zipfly.py
src/djehuty/web/config/: __init__.py  json_parser.py  runtime.py
src/djehuty/web/resources/html_templates/: 400.html  403.html  404.html  410.html  500.html  502.html  503.html  activate_2fa_session.html  agriculture-animal-plant-sciences.html  article.html  author.html  categories.html  category.html  chemistry.html  collection.html  colors.css  dataset.html  dataset_access_request.html  debug.html  feedback.html  fonts.css  git_instructions.html  institutions.html  jsonld.html  layout.html  maintenance.html  opendap_to_doi.html  physical_sample.html  portal.html  private_link_is_expired.html  public_metadata.html  search.html  sitemap_template.xml
src/djehuty/web/resources/html_templates/admin/: dashboard.html  embargo.html  exploratory.html  maintenance.html  merge_accounts.html  quota_requests.html  sparql.html  users.html
src/djehuty/web/resources/html_templates/depositor/: collection-private-links.html  dashboard.html  dataset-private-links.html  edit-article.html  edit-collection.html  edit-dataset.html  edit-physical-object.html  edit-physical-sample.html  edit-session.html  language-selector.html  my-collections.html  my-data.html  my-physical-samples.html  new_private_link.html  physical-objects.html  physical-sample-submitted-for-review.html  physical-samples.html  private-links.html  profile.html  published-collection.html  submitted-for-review.html
src/djehuty/web/resources/html_templates/email/: 2fa_token.html  2fa_token.txt  data_access_request.html  data_access_request.txt  dataset_approved.html  dataset_approved.txt  dataset_declined.html  dataset_declined.txt  dataset_submitted.html  dataset_submitted.txt  declined_dataset_notification.html  declined_dataset_notification.txt  feedback.html  feedback.txt  layout.html  physical_sample_approved.html  physical_sample_approved.txt  physical_sample_declined.html  physical_sample_declined.txt  published_dataset_notification.html  (+9 more)
src/djehuty/web/resources/metadata_templates/: bibtex.bib  citation.cff  datacite.xml  dc.xml  endnote.enw  nlm.xml  refman.ris  refworks.xml
src/djehuty/web/resources/sparql_templates/: account_by_email.sparql  account_by_id.sparql  account_by_session_token.sparql  account_categories.sparql  account_containers_for_merge.sparql  account_id_by_orcid.sparql  account_sessions.sparql  account_storage_used.sparql  account_uuid_by_orcid.sparql  accounts.sparql  admin_retract_delete_review.sparql  admin_retract_find_review.sparql  admin_retract_flip_draft_active.sparql  admin_retract_flip_published.sparql  admin_retract_move_versions_and_promote_draft.sparql  admin_retract_strip_publish_metadata.sparql  admin_update_embargo.sparql  admin_update_license.sparql  append_to_list.sparql  article_container.sparql  article_derived_from.sparql  article_embargo_options.sparql  article_files.sparql  article_references.sparql  article_statistics.sparql  article_statistics_timeline.sparql  article_storage_used.sparql  article_versions.sparql  articles.sparql  associated_authors.sparql  author_collaborators.sparql  author_profile.sparql  author_public_items.sparql  authors.sparql  categories.sparql  categories_tree.sparql  category_by_id.sparql  collaborators.sparql  collection_articles.sparql  collection_articles_count.sparql  (+155 more)
src/rdbackup/: database.py  figshare.py  ui.py
src/rdbackup/api/: database.py  formatter.py  ui.py  wsgi.py
src/rdbackup/api/resources/templates/: home.html  layout.html
src/rdbackup/backup/: database.py  figshare.py  ui.py
src/rdbackup/utils/: convenience.py  counters.py  rdf.py
(+198 files in other folders)
