[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend   = "setuptools.build_meta"

[project]
name            = "djehuty"
version         = "26.1"
authors         = [{ name="Roel Janssen", email="r.r.e.janssen@tudelft.nl" }]
description     = "The 4TU.ResearchData and Nikhef data repository system"
readme          = "README.md"
requires-python = ">=3.9"
dependencies    = [
    "Jinja2>=3.0.3",
    "pygit2>=1.6.1",
    "rdflib>=6.0.0",
    "requests>=2.26.0",
    "Werkzeug>=2.0.2",
    "defusedxml>=0.7.1",
    "pillow>=9.4.0",
]
classifiers     = [
    "Programming Language :: Python :: 3",
    "Environment :: Web Environment",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "diff-cover",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[project.urls]
"Homepage"      = "https://data.4tu.nl/"
"Source Code"   = "https://github.com/4TUResearchData/djehuty"
"Bug Tracker"   = "https://github.com/4TUResearchData/djehuty/issues"

[project.scripts]
djehuty = "djehuty.ui:main"
