[metadata]
name = rdbackup
version = 0.0.1
author = Roel Janssen
description =
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.tudelft.nl/4tu.researchdata/rdbackup

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
