[metadata]
name = rdbackup
version = 0.0.1
author = Roel Janssen
description =
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.tudelft.nl/4tu.researchdata/rdbackup

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    rdbackup = rdbackup.ui:main

[options.packages.find]
where = src

[sdist]
owner = root
group = root
